--- a/languages/recent-posts-widget-extended.pot
+++ b/languages/recent-posts-widget-extended.pot
@@ -6,7 +6,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2022-09-22 17:06+0000\n"
+"POT-Creation-Date: 2022-09-27 10:23+0000\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-KeywordsList: __;_e;_ex:1,2c;_n:1,2;_n_noop:1,2;_nx:1,2,4c;_nx_noop:1,2,3c;_x:1,2c;esc_attr__;esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c\n"
 "X-Poedit-SearchPath-0: .\n"
@@ -199,7 +199,7 @@ msgid "Custom CSS"
 msgstr ""
 
 #: includes/form.php:318
-msgid "Custom CSS is no longer editable, please copy and paste your custom CSS to"
+msgid "If you turn off the default styles, you can use these css code to customize the recent posts style."
 msgstr ""
 
 #. translators: %s: current time
